--- a/WpfCrud/MainWindow.xaml
+++ b/WpfCrud/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:WpfCrud"
+        xmlns:controls="clr-namespace:WpfCrud.CustomControls"
         Title="MainWindow" Height="278.101" Width="415.208">
     <Window.Resources>
         <local:SelectedIndexToBool x:Key="selectedIndexToBool"/>
@@ -11,7 +12,8 @@
             <RowDefinition Height="2*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <DataGrid Name="gridCategories"
+        <controls:TitledDataGrid
+            x:Name="gridCategories"
                   IsReadOnly="True"
                   HorizontalAlignment="Center"
                   />
@@ -33,7 +35,7 @@
                        Grid.Row="1"/>
             <TextBox Name="txtCategoryName"
                      Grid.Column="1"
-                     Text="{Binding Name,Mode=OneWay}"/>
+                     Text="{Binding CategoryName,Mode=OneWay}"/>
             <TextBox Name="txtDescription"
                      Grid.Row="1"
                      Grid.Column="1"
@@ -49,7 +51,7 @@
                     Grid.Column="2"
                     Grid.Row="2"
                     Content="Seçili Kategoriyi Sil" Click="deleteCategory_Click"
-                    Visibility="{Binding ElementName=gridCategories,Path=SelectedIndex,Converter={StaticResource selectedIndexToBool}}"/>
+                    IsEnabled="{Binding ElementName=gridCategories,Path=SelectedIndex,Converter={StaticResource selectedIndexToBool}}"/>
         </Grid>
 
     </Grid>
